fix: Fix job running flicker status

--- a/src/scss/lego.custom.scss
+++ b/src/scss/lego.custom.scss
@@ -717,7 +717,7 @@ label.checkbox:before {
 
   &.radio-with-badge {
     label.radio-button {
-      padding-right: 36px;
+      padding-right: 44px;
     }
   }
 }
